--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-    "scripts": {
-  "start": "vite",
-
+  "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -14,6 +13,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
