--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^5.3.4",
+    "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
